2008-04-10  Eric Blake  <ebb9@byu.net>

	AC_AUTOCONF_VERSION can inadvertently expand to a macro name.
	* m4/amversion.in (AM_SET_CURRENT_AUTOMAKE_VERSION): Use proper
	m4 quoting.
	* aclocal.in (write_aclocal): Likewise.
	* tests/missing6.test: New test.
	* tests/Makefile.am (TESTS): Run it.
	* tests/missing4.test: Adjust.

2008-03-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/texinfo.tex: Sync from upstream.

2008-03-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (Requirements, Linking, Extending):
	Fix underfull and overfull lines, fix wording a bit.

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: Sync from
	upstream.

	* Makefile.am (WGET_SV_GIT_CF): New.
	(fetch): Pull config.guess and config.sub from git repo now.

2008-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Drop usage of obsolete macros AC_EXEEXT and AC_OBJEXT.
	* tests/ansi4.test: Drop AC_OBJEXT and AC_EXEEXT.
	* tests/ansi6.test: Likewise.
	* tests/ansi7.test: Likewise.
	* tests/condlib.test: Likewise.
	* tests/cygwin32.test: Likewise.
	* tests/exeext2.test: Likewise.
	* tests/libobj11.test: Likewise.
	* tests/library.test: Likewise.
	* tests/txinfo5.test: Likewise.

2008-03-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Skip instsh3.test if `touch -t' does not work.
	* tests/instsh3.test: Test for `touch -t', fails with Solaris
	/usr/ucb/touch.
	* THANKS: Update.
	Report by Younes Younes.

2008-02-27  Reuben Thomas  <rrt@sc3d.org>

	* doc/automake.texi (wildcards): Improve "Why doesn't Automake
	support wildcards" node's English and sense.

2008-02-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/check.am (check-TESTS): In the case patterns for
	XFAILed tests, add literal bracket expression for matching
	whitespace, as NetBSD 4.99.54 ksh does not understand a
	bracket expression resulting from variable expansion.
	* README: Explain how to run the Automake test suite, including
	setting MAKE to test gmake.
	Report by Patrick Welche.
