@@ -11168,7 +11168,7 @@ lasts.
 
 @item 1996-11-26 David J.@tie{}MacKenzie releases Autoconf 2.12.
 
-Between June and October, the Autoconf development is almost staled.
+Between June and October, the Autoconf development is almost stalled.
 Roland McGrath has been working at the beginning of the year.  David
 comes back in November to release 2.12, but he won't touch Autoconf
 anymore after this year, and Autoconf then really stagnates.  The
