@@ -41,21 +41,21 @@ if %?FIRST%
 ## Whenever $(AUTOHEADER) has run, we must make sure that
 ## ./config.status will rebuild config.h.  The dependency from %STAMP%
 ## on %CONFIG_H_DEPS% (which contains config.hin) is not enough to
-## express his.
+## express this.
 ##
 ## There are some tricky cases where this rule will build a
 ## config.hin which has the same timestamp as %STAMP%, in which case
-## ./config.status will not be rerun (meaning that users will use in
+## ./config.status will not be rerun (meaning that users will use an
 ## out-of-date config.h without knowing it).  One situation where this
-## can occurs is the following:
+## can occur is the following:
 ## 1. the user updates some configure dependency (let's say foo.m4)
-##    and run `make'
+##    and runs `make'
 ## 2. the rebuild rules detect that a foo.m4 has changed,
 ##    run aclocal, autoconf, automake, and then run ./config.status.
 ##    (Note that autoheader hasn't been called yet, so ./config.status
 ##    outputs a config.h from an obsolete config.hin.)
 ## 3. Once Makefile has been regenerated, make continues, and
-##    discover that config.h is a dependency of the `all' rule.
+##    discovers that config.h is a dependency of the `all' rule.
 ##    Because config.h depends on stamp-h1, stamp-h1 depends on
 ##    config.hin, and config.hin depends on aclocal.m4, make runs
 ##    autoheader to rebuild config.hin.
