@@ -1,3 +1,9 @@
+2008-05-13  Stepan Kasal  <skasal@redhat.com>
+
+	Fix typos.
+	* doc/automake.texi (Timeline): Reported by Reuben Thomas.
+	* lib/am/remake-hdr.am: A few typos in comments.
+
 2008-04-10  Eric Blake  <ebb9@byu.net>
 
 	AC_AUTOCONF_VERSION can inadvertently expand to a macro name.
